@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2006-2012 by Walter Brisken                             *
+ *   Copyright (C) 2006-2018 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -27,18 +27,23 @@
 //
 //============================================================================
 
-#include "config.h"
+#define _FILE_OFFSET_BITS 64
+
 #include <complex.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include "config.h"
+
 #include "../mark5access/mark5_stream.h"
 
 const char program[] = "m5d";
 const char author[]  = "Walter Brisken";
-const char version[] = "1.4";
-const char verdate[] = "20151029";
+const char version[] = "1.5";
+const char verdate[] = "20180914";
 
 static void usage(const char *pgm)
 {
@@ -56,6 +61,7 @@ static void usage(const char *pgm)
 	printf("  <n> is the number of samples per channel to decode\n\n");
 	printf("  <offset> is number of bytes into file to start decoding\n\n");
 	printf("The following options are supported\n\n");
+	printf("    --version   Print version information and quit\n");
 	printf("    --double    Double sideband (complex) data\n");
 	printf("                If using VDIF, specify VDIFC (complex VDIF) under dataformat\n\n");
 	printf("    --format=%%f Format specifier for sample printout (default: %%2.0f)\n\n");
@@ -92,6 +98,11 @@ typedef struct vdif_edv4_header {	/* proposed extension extensions: (WFB email t
  } vdif_edv4_header;
 
 
+static int bytes2samples(const struct mark5_stream *ms, long long bytes)
+{
+	return bytes*8/(ms->nbit*ms->nchan*ms->decimation);
+}
+
 static int decode_short(const char *filename, const char *formatname, const char *f, long long offset, int n)
 {
 	struct mark5_stream *ms;
@@ -106,6 +117,7 @@ static int decode_short(const char *filename, const char *formatname, const char
 	unsigned char *raw;
 	FILE *in;
 	int edv4 = 0;
+	size_t r;
 
 	total = unpacked = 0;
 
@@ -116,14 +128,6 @@ static int decode_short(const char *filename, const char *formatname, const char
 
 		return EXIT_FAILURE;
 	}
-	if(offset != lseek(fileno(in), offset, SEEK_SET))
-	{
-		fprintf(stderr, "Error: can't seek %lld bytes into %s\n", offset, filename);
-		fclose(in);
-
-		return EXIT_FAILURE;
-	}
-
 	ms = new_mark5_stream( new_mark5_stream_unpacker(0), new_mark5_format_generic_from_string(formatname) );
 	if(!ms)
 	{
@@ -131,6 +135,26 @@ static int decode_short(const char *filename, const char *formatname, const char
 		fclose(in);
 
 		return EXIT_FAILURE;
+	}
+
+	if(offset > 0)
+	{
+		off_t seeksize;
+		
+		seeksize = (offset/ms->framebytes)*ms->framebytes;
+		if(fseeko(in, seeksize, SEEK_SET) != 0)
+		{
+			fprintf(stderr, "Error: can't seek %lld bytes into %s\n", (long long)seeksize, filename);
+			fclose(in);
+
+			return EXIT_FAILURE;
+		}
+		else
+		{
+			printf("  did a seek of %lld bytes; remaining offset = %d bytes\n", (long long)seeksize, (int)(offset-seeksize));
+		}
+
+		offset -= seeksize;
 	}
 
 	data = (float **)malloc(ms->nchan*sizeof(float *));
@@ -143,7 +167,7 @@ static int decode_short(const char *filename, const char *formatname, const char
 	invalid = (int *)calloc(ms->nchan, sizeof(int));
 	validsum = (int *)calloc(ms->nchan, sizeof(int));
 
-	fread(raw, 1, rawsize, in);
+	r = fread(raw, 1, rawsize, in);
 	fclose(in);
 
 	mark5_stream_print(ms);
@@ -155,7 +179,7 @@ static int decode_short(const char *filename, const char *formatname, const char
 		printf(" to %d\n", n);
 	}
 
-	start = 0;
+	start = bytes2samples(ms, offset);
 	for(; n > 0; n -= chunk)
 	{
 		if(n < chunk)
@@ -199,9 +223,9 @@ static int decode_short(const char *filename, const char *formatname, const char
 			}
 		}
 
-		for(j = 0; j < chunk; j++)
+		for(j = 0; j < chunk; ++j)
 		{
-			for(k = 0; k < ms->nchan; k++)
+			for(k = 0; k < ms->nchan; ++k)
 			{
 				printf(f, data[k][j]);
 			}
@@ -223,7 +247,7 @@ static int decode_short(const char *filename, const char *formatname, const char
 		fprintf(stderr, "%d / %d samples unpacked\n", unpacked, total);
 	}
 
-	for(i = 0; i < ms->nchan; i++)
+	for(i = 0; i < ms->nchan; ++i)
 	{
 		free(data[i]);
 	}
@@ -293,9 +317,9 @@ static int decode(const char *filename, const char *formatname, const char *f, l
 			unpacked += status;
 		}
 
-		for(j = 0; j < chunk; j++)
+		for(j = 0; j < chunk; ++j)
 		{
-			for(k = 0; k < ms->nchan; k++)
+			for(k = 0; k < ms->nchan; ++k)
 			{
 				printf(f, data[k][j]);
 			}
@@ -305,7 +329,7 @@ static int decode(const char *filename, const char *formatname, const char *f, l
 
 	fprintf(stderr, "%lld / %lld samples unpacked\n", unpacked, total);
 
-	for(i = 0; i < ms->nchan; i++)
+	for(i = 0; i < ms->nchan; ++i)
 	{
 		free(data[i]);
 	}
@@ -337,7 +361,7 @@ static int decode_complex(const char *filename, const char *formatname, const ch
 	}
 
 	data = (float complex **)malloc(ms->nchan*sizeof(float *));
-	for(i = 0; i < ms->nchan; i++)
+	for(i = 0; i < ms->nchan; ++i)
 	{
 		data[i] = (float complex *)malloc(chunk*sizeof(float complex));
 	}
@@ -371,9 +395,9 @@ static int decode_complex(const char *filename, const char *formatname, const ch
 			unpacked += status;
 		}
 
-		for(j = 0; j < chunk; j++)
+		for(j = 0; j < chunk; ++j)
 		{
-			for(k = 0; k < ms->nchan; k++)
+			for(k = 0; k < ms->nchan; ++k)
 			{
 				printf(f, creal(data[k][j]), cimag(data[k][j]));
 			}
@@ -383,7 +407,7 @@ static int decode_complex(const char *filename, const char *formatname, const ch
 
 	fprintf(stderr, "%lld / %lld complex samples unpacked\n", unpacked, total);
 
-	for(i = 0; i < ms->nchan; i++)
+	for(i = 0; i < ms->nchan; ++i)
 	{
 		free(data[i]);
 	}
@@ -413,8 +437,12 @@ int main(int argc, char **argv)
 
 			return EXIT_SUCCESS;
 		}
+		else if(strcmp(argv[optind], "--version") == 0)
+		{
+			printf("%s ver. %s   %s  %s\n\n", program, version, author, verdate);
+		}
 		else if(strcmp(argv[optind], "-d") == 0 ||
-		   strcmp(argv[optind], "--double") == 0)
+		        strcmp(argv[optind], "--double") == 0)
 		{
 			doublesideband = 1;
 			printf("Assuming double sideband data\n");
@@ -427,7 +455,7 @@ int main(int argc, char **argv)
 		{
 			break;
 		}
-		optind++;
+		++optind;
 	}
 	optc = argc - optind;
 
@@ -460,8 +488,7 @@ int main(int argc, char **argv)
 		}
 		else
 		{
-			mf = new_mark5_format_from_stream(
-				new_mark5_stream_memory(buffer, bufferlen/2));
+			mf = new_mark5_format_from_stream(new_mark5_stream_memory(buffer, bufferlen/2));
 
 			print_mark5_format(mf);
 			delete_mark5_format(mf);
@@ -475,7 +502,8 @@ int main(int argc, char **argv)
 
 	else if((optc < 3) || (optc > 4))
 	{
-		usage(argv[0]);
+		fprintf(stderr, "\nIncomplete or confused command line.\n\n");
+		fprintf(stderr, "Run with -h or --help for usage information.\n\n");
 
 		return EXIT_FAILURE;
 	}
@@ -495,10 +523,12 @@ int main(int argc, char **argv)
 	}
 	else
 	{
+printf("n = %d\n", (int)n);
 		char* f = (char*)malloc(strlen(format)+10);
 		sprintf(f, "%s ", format);
 		if(n < 100000)
 		{
+printf("Doing Short decode\n");
 			retval = decode_short(argv[optind], argv[optind+1], f, offset, n);
 		}
 		else
